--- a/index.html
+++ b/index.html
@@ -1070,8 +1070,8 @@ const SUPA_URL = 'https://kyesnqdokdcgkcjxfcvf.supabase.co';
 // ============================================================
     // AuthManager - 强制登录版 (严禁注册)
     // ============================================================
-    const SUPA_URL = 'YOUR_SUPABASE_URL'; // ★ 保持你之前的 URL
-    const SUPA_KEY = 'YOUR_SUPABASE_KEY'; // ★ 保持你之前的 Key
+    const SUPA_URL = 'https://kyesnqdokdcgkcjxfcvf.supabase.co'; //
+    const SUPA_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Imt5ZXNucWRva2RjZ2tjanhmY3ZmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjY1NDg3NzAsImV4cCI6MjA4MjEyNDc3MH0.pzp0K6zwQUiQR99-pRvjsvuHHpcGVyURTby_e9sFEPI'; //
 
     class AuthManager {
         constructor(verbMgr) {
@@ -1245,3 +1245,4 @@ const SUPA_URL = 'https://kyesnqdokdcgkcjxfcvf.supabase.co';
   </script>
 </body>
 </html>
+
